# liquid-nats-plugins-example

./: .gitignore  README.md  cabal.project  hie.yaml  stack.yaml  talk-gadts-lh.cabal
src/currency/: Currency.hs
src/gadt/: Example.hs
src/liquid/: Example.hs
